# TicTacToe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
TicTacToe/: CMakeLists.txt  app.cpp  window.cpp  window.h
TicTacToe/cmake/: Findglfw3.cmake
TicTacToe/lua/: config.lua
TicTacToe/player/: aiPlayer.cpp  humanPlayer.cpp  minMaxAIPlayer.cpp  simpleAIPlayer.cpp
TicTacToe/player/include/: aiPlayer.h  humanPlayer.h  minMaxAIPlayer.h  player.h  simpleAIPlayer.h
TicTacToe/task/: task.cpp
TicTacToe/task/include/: task.h
TicTacToe/ui/: anim.cpp  chessboard.cpp  grid.cpp  sidebar.cpp  ui.cpp  uiBase.cpp
TicTacToe/ui/include/: anim.h  chessboard.h  grid.h  sidebar.h  ui.h  uiBase.h
libs/: CMakeLists.txt
